# g2o

g2o/examples/: CMakeLists.txt
g2o/examples/simple_optimize_lib/: CMakeLists.txt  simple_optimize_lib.cpp
